###################
## TODOs
###################

allow target to be a list of named vectors so that we get BLPs for a vector of outcomes simultaneously

generalize the syntax of target to allow importance weights on blocks, like you might need if defining a multi-year target

create S3 class and associated summary and plot methods