@@ -1,8 +1,8 @@
 Package: schoolgrowth
 Type: Package
 Title: Functions for Smoothing School-Level Growth Measures
-Version: 0.5-15
-Date: 2020-04-30
+Version: 0.5-16
+Date: 2020-06-03
 Depends: R (>= 3.5.0)
 Imports: stats, methods, Matrix, MASS
 Author: J.R. Lockwood
