@@ -2,6 +2,8 @@
 ## TODOs
 ###################
 
+add control option "report_patterns_only" that halts and returns after the student pattern block of code
+
 allow target to be a list of named vectors so that we get BLPs for a vector of outcomes simultaneously
 
 generalize the syntax of target to allow importance weights on blocks, like you might need if defining a multi-year target
